Fix z-index of timeline overlay

--- a/app/styles/_timeline.scss
+++ b/app/styles/_timeline.scss
@@ -79,7 +79,7 @@
   align-items: center;
   flex-direction: column;
   position: absolute;
-  z-index: 20000;
+  z-index: 490;
   width: 100%;
   height: 150px;
 }
